Add fallback InputHandler to prevent crash when adding bookmark with UTM view angle

BUG: 381872